// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spire component App type renders card when app has SPIRE-managed workloads 1`] = `
<div>
  <div
    class="pf-v6-c-card pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Card-6"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id="SpireCard"
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <h5
          class="pf-v6-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-6"
          data-ouia-component-type="PF6/Title"
          data-ouia-safe="true"
        >
          SPIRE
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="kiali_fz3g8mp"
      >
        <ul>
          <li>
            <span>
              Status
            </span>
            <div
              style="display: inline-block;"
            >
              This application has workloads that are using SPIRE
            </div>
          </li>
          <li
            style="margin-top: 0.5rem;"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Spire component App type renders card when app has mixed workloads (some SPIRE-managed) 1`] = `
<div>
  <div
    class="pf-v6-c-card pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Card-8"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id="SpireCard"
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <h5
          class="pf-v6-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-8"
          data-ouia-component-type="PF6/Title"
          data-ouia-safe="true"
        >
          SPIRE
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="kiali_fz3g8mp"
      >
        <ul>
          <li>
            <span>
              Status
            </span>
            <div
              style="display: inline-block;"
            >
              This application has workloads that are using SPIRE
            </div>
          </li>
          <li
            style="margin-top: 0.5rem;"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Spire component App type renders card when app has multiple SPIRE-managed workloads 1`] = `
<div>
  <div
    class="pf-v6-c-card pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Card-7"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id="SpireCard"
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <h5
          class="pf-v6-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-7"
          data-ouia-component-type="PF6/Title"
          data-ouia-safe="true"
        >
          SPIRE
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="kiali_fz3g8mp"
      >
        <ul>
          <li>
            <span>
              Status
            </span>
            <div
              style="display: inline-block;"
            >
              This application has workloads that are using SPIRE
            </div>
          </li>
          <li
            style="margin-top: 0.5rem;"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Spire component Service type renders card when service has SPIRE-managed workloads 1`] = `
<div>
  <div
    class="pf-v6-c-card pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Card-3"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id="SpireCard"
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <h5
          class="pf-v6-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-3"
          data-ouia-component-type="PF6/Title"
          data-ouia-safe="true"
        >
          SPIRE
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="kiali_fz3g8mp"
      >
        <ul>
          <li>
            <span>
              Status
            </span>
            <div
              style="display: inline-block;"
            >
              This service has workloads that are using SPIRE
            </div>
          </li>
          <li
            style="margin-top: 0.5rem;"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Spire component Service type renders card when service has mixed workloads (some SPIRE-managed) 1`] = `
<div>
  <div
    class="pf-v6-c-card pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Card-4"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id="SpireCard"
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <h5
          class="pf-v6-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-4"
          data-ouia-component-type="PF6/Title"
          data-ouia-safe="true"
        >
          SPIRE
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="kiali_fz3g8mp"
      >
        <ul>
          <li>
            <span>
              Status
            </span>
            <div
              style="display: inline-block;"
            >
              This service has workloads that are using SPIRE
            </div>
          </li>
          <li
            style="margin-top: 0.5rem;"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Spire component Service type renders card when service has multiple SPIRE-managed workloads 1`] = `
<div>
  <div
    class="pf-v6-c-card pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Card-5"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id="SpireCard"
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <h5
          class="pf-v6-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-5"
          data-ouia-component-type="PF6/Title"
          data-ouia-safe="true"
        >
          SPIRE
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="kiali_fz3g8mp"
      >
        <ul>
          <li>
            <span>
              Status
            </span>
            <div
              style="display: inline-block;"
            >
              This service has workloads that are using SPIRE
            </div>
          </li>
          <li
            style="margin-top: 0.5rem;"
          />
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Spire component Workload type renders card with multiple identity matches 1`] = `
<div>
  <div
    class="pf-v6-c-card pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Card-2"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id="SpireCard"
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <h5
          class="pf-v6-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-2"
          data-ouia-component-type="PF6/Title"
          data-ouia-safe="true"
        >
          SPIRE
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="kiali_fz3g8mp"
      >
        <ul>
          <li>
            <span>
              Status
            </span>
            <div
              style="display: inline-block;"
            >
              This workload is using SPIRE (SPIFFE Runtime Environment) for identity management.
            </div>
          </li>
          <li
            style="margin-top: 0.5rem;"
          />
          <li>
            <span>
              Annotations
            </span>
            <div
              style="display: inline-block;"
            >
              <code
                class="kiali_f107x8dj"
              >
                inject.istio.io/templates: spire
              </code>
            </div>
          </li>
          <li
            style="margin-top: 0.25rem;"
          />
          <li>
            <span>
              Labels
            </span>
            <div
              style="display: inline-block;"
            >
              <code
                class="kiali_f107x8dj"
              >
                spiffe.io/spire-managed-identity: true
              </code>
            </div>
          </li>
          <li
            style="margin-top: 0.25rem;"
          />
          <li>
            <span>
              PodLabels
            </span>
            <div
              style="display: inline-block;"
            >
              <code
                class="kiali_f107x8dj"
              >
                spiffe.io/spire-managed-identity: true
              </code>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Spire component Workload type renders card with single identity match 1`] = `
<div>
  <div
    class="pf-v6-c-card pf-m-compact"
    data-ouia-component-id="OUIA-Generated-Card-1"
    data-ouia-component-type="PF6/Card"
    data-ouia-safe="true"
    id="SpireCard"
  >
    <div
      class="pf-v6-c-card__header"
    >
      <div
        class="pf-v6-c-card__header-main"
      >
        <h5
          class="pf-v6-c-title pf-m-lg"
          data-ouia-component-id="OUIA-Generated-Title-1"
          data-ouia-component-type="PF6/Title"
          data-ouia-safe="true"
        >
          SPIRE
        </h5>
      </div>
    </div>
    <div
      class="pf-v6-c-card__body"
    >
      <div
        class="kiali_fz3g8mp"
      >
        <ul>
          <li>
            <span>
              Status
            </span>
            <div
              style="display: inline-block;"
            >
              This workload is using SPIRE (SPIFFE Runtime Environment) for identity management.
            </div>
          </li>
          <li
            style="margin-top: 0.5rem;"
          />
          <li>
            <span>
              Labels
            </span>
            <div
              style="display: inline-block;"
            >
              <code
                class="kiali_f107x8dj"
              >
                spiffe.io/spire-managed-identity: true
              </code>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
